[Java] Upgrade to Aeron 1.47.0 and Agrona 2.0.1.