@@ -104,6 +104,7 @@ subprojects {
 
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
+        jvmArgs('--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED')
 
         if (buildJavaVersion >= 21) {
             jvmArgs('-XX:+EnableDynamicAgentLoading')
